--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+   "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "mongodb": "^6.17.0"
   }
