--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
    "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "mongodb": "^6.17.0"
-  }
+      "start": "node index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "dependencies": {
+      "mongodb": "^6.17.0",
+      "react-scripts": "^0.0.0"
+   }
 }
