--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-client": "cd ../client && npm install && npm run build",
+    "render-build": "npm run build-client"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
